--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -34,7 +34,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.26",
-    "@by/dtos": "*"
+    "@by/types": "*"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
