--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -6,5 +6,5 @@
     "strict": false
   },
   "include": ["src"],
-  "exclude": ["node_modules","dist"]
+  "exclude": ["node_modules","dist",".turbo"]
 }
