Add dialog forms to create, edit & delete products

--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "target": "es6", // 👈 O al menos "ES2020" o superior
+    "module": "commonjs", // 👈 O "NodeNext" si usas ES Modules
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "outDir": "./dist",
