--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,19 +3,20 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "build":"tsc"
+        "build": "tsc"
     },
     "dependencies": {
-        "class-validator": "^0.14.0",
-        "class-transformer": "^0.5.1"  
+        "@nestjs/mapped-types": "^2.1.0",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.0"
     },
     "devDependencies": {
-        "typescript":"^5.7.3"
+        "typescript": "^5.7.3"
     },
-    "exports":{
-        ".":{
-            "types":"./src/index.ts",
-            "default":"./dist/index.js"
+    "exports": {
+        ".": {
+            "types": "./src/index.ts",
+            "default": "./dist/index.js"
         }
     }
 }
