--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "packageManager": "npm@11.6.1",
   "workspaces": [
-    "apps/*",
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ]
 }
