--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,6 +6,7 @@
         "build": "tsc"
     },
     "dependencies": {
+        "@nestjs/core": "^11.1.6",
         "@nestjs/mapped-types": "^2.1.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0"
@@ -15,8 +16,10 @@
     },
     "exports": {
         ".": {
-            "types": "./src/index.ts",
+            "types": "./dist/index.d.ts",
             "default": "./dist/index.js"
         }
-    }
+    },
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts"
 }
