--- a/turbo.json
+++ b/turbo.json
@@ -11,13 +11,16 @@
                 "dist/**"
             ],
             "env": [
-                "DB_HOST",
-                "DB_PORT",
-                "POSTGRESQL_DB_NAME",
-                "POSTGRESQL_USERNAME",
-                "POSTGRESQL_PASSWORD",
+                "DATABASE_PUBLIC_URL",
+                "DATABASE_URL",
+                "PGDATA",
+                "PGHOST",
+                "PGPORT",
+                "POSTGRES_DB",
+                "POSTGRES_PASSWORD",
+                "POSTGRES_USER",
                 "JWT_SECRET",
-                "PORT"
+                "NODE_ENV"
             ]
         },
         "check-types": {
